--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "test": "jest --passWithNoTests --no-cache --runInBand \"--watch\""
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mongoose": "^6.3.0"
   }
 }
