--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
     "@types/express": "^4.17.13",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
@@ -35,6 +36,7 @@
   },
   "dependencies": {
     "express": "^4.17.3",
+    "ioredis": "^5.0.4",
     "mongoose": "^6.3.0"
   }
 }
